--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
 /* Your CSS Code here. */
+main{
+	background-color: black;
+	height: 150px;
+	width: 150px;
+}
+p{
+	color: white;
+	margin-left: 32px;
+	padding: 10px;
+}
